--- a/index.html
+++ b/index.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>Responsive Layout</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-
-    <link rel="stylesheet" href="./asset/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./asset/css/genericrules.css">
+    <link rel="stylesheet" href="./asset/css/style.css">
 </head>
+
 <body class="debug">
     <header>
         <nav class="d_flex">
             <div class="logo">
                 <img src="./asset/img/logo.png" alt="Logo">
             </div>
-            <div class="menu">
-                <ul>
+            <div class="menu_lg d_flex">
+                <ul class="d_flex">
                     <li>
                         <a href="">Planning</a>
                     </li>
@@ -31,10 +34,14 @@
                         <a href="">About US</a>
                     </li>
                     <button>Get Started</button>
-                    <div class="ico_menu">
-                        <i class="fa-solid fa-bars"></i>
-                    </div>
                 </ul>
+            </div>
+            <div class="ico_menu">
+                <svg xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 448 512"><!--! Font Awesome Pro 6.3.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                    <path
+                        d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z" />
+                </svg>
             </div>
         </nav>
     </header>
@@ -45,4 +52,5 @@
 
     </footer>
 </body>
+
 </html>
