intro block add

--- a/index.html
+++ b/index.html
@@ -46,7 +46,26 @@
         </nav>
     </header>
     <main>
-
+        <div class="intro">
+            <div class="row d_flex">
+                <div class="col_12 col_lg_8"></div>
+                <div class="col_12 col_lg_4"></div>
+                <div class="col_12 col_lg_4"></div>
+                <div class="col_12 col_lg_4"></div>
+                <div class="col_12 col_lg_4"></div>
+            </div>
+        </div>
+        <!-- /.intro -->
+        <div class="planning"></div>
+        <!-- /.planning -->
+        <div class="partners"></div>
+        <!-- /.partners -->
+        <div class="benefits"></div>
+        <!-- /.benefits -->
+        <div class="about"></div>
+        <!-- /.about -->
+        <div class="get"></div>
+        <!-- /.get -->
     </main>
     <footer>
 
