fix size block responsive

--- a/index.html
+++ b/index.html
@@ -48,15 +48,17 @@
     <main>
         <div class="intro">
             <div class="row d_flex">
-                <div class="col_12 col_lg_8"></div>
-                <div class="col_12 col_lg_4"></div>
-                <div class="col_12 col_lg_4"></div>
-                <div class="col_12 col_lg_4"></div>
-                <div class="col_12 col_lg_4"></div>
+                <div class="col_12 col_md_8"></div>
+                <div class="col_12 col_md_4"></div>
+                <div class="col_12 col_md_4"></div>
+                <div class="col_12 col_md_4"></div>
+                <div class="col_12 col_md_4"></div>
             </div>
         </div>
         <!-- /.intro -->
-        <div class="planning"></div>
+        <div class="planning">
+
+        </div>
         <!-- /.planning -->
         <div class="partners"></div>
         <!-- /.partners -->
