add planning block

--- a/index.html
+++ b/index.html
@@ -57,7 +57,14 @@
         </div>
         <!-- /.intro -->
         <div class="planning">
+            <div class="row d_flex">
+                <div class="col_12 col_lg_6">
 
+                </div>
+                <div class="col_12 col_lg_6">
+                    
+                </div>
+            </div>
         </div>
         <!-- /.planning -->
         <div class="partners"></div>
