add partners block

--- a/index.html
+++ b/index.html
@@ -62,12 +62,27 @@
 
                 </div>
                 <div class="col_12 col_lg_6">
-                    
+
                 </div>
             </div>
         </div>
         <!-- /.planning -->
-        <div class="partners"></div>
+        <div class="partners">
+            <div class="row d_flex">
+                <div class="col_12">
+
+                </div>
+                <div class="col_12">
+
+                </div>
+                <div class="col_12">
+
+                </div>
+                <div class="col_12">
+
+                </div>
+            </div>
+        </div>
         <!-- /.partners -->
         <div class="benefits"></div>
         <!-- /.benefits -->
