--- a/index.html
+++ b/index.html
@@ -84,11 +84,30 @@
             </div>
         </div>
         <!-- /.partners -->
-        <div class="benefits"></div>
+        <div class="benefits">
+            <div class="row d_flex">
+                <div class="col_12"></div>
+                <div class="col_12 col_md_6"></div>
+                <div class="col_12 col_md_6"></div>
+                <div class="col_12 col_md_6"></div>
+                <div class="col_12 col_md_6"></div>
+                <div class="col_12 col_md_6"></div>
+                <div class="col_12 col_md_6"></div>
+            </div>
+        </div>
         <!-- /.benefits -->
-        <div class="about"></div>
+        <div class="about">
+            <div class="row d_flex">
+                <div class="col_12 col_md_6"></div>
+                <div class="col_12 col_md_6"></div>
+            </div>
+        </div>
         <!-- /.about -->
-        <div class="get"></div>
+        <div class="get">
+            <div class="row">
+                <div class="col_12"></div>
+            </div>
+        </div>
         <!-- /.get -->
     </main>
     <footer>
