add frist col  into intro

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./asset/css/style.css">
 </head>
 
-<body class="debug">
+<body class="">
     <header>
         <nav class="d_flex">
             <div class="logo">
@@ -48,7 +48,17 @@
     <main>
         <div class="intro">
             <div class="row d_flex">
-                <div class="col_12 col_md_8"></div>
+                <div class="col_12 col_md_8 d_flex">
+                    <div class="text_intro">
+                        <h2>Get a demo application</h2>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet, modi esse cum asperiores
+                            soluta beatae culpa obcaecati architecto at hic, dicta facilis cupiditate nihil, mollitia
+                            praesentium officiis velit error iure?</p>
+                        <button>App Store</button>
+                    </div>
+
+                    <img src="./asset/img/phone.png" alt="">
+                </div>
                 <div class="col_12 col_md_4"></div>
                 <div class="col_12 col_md_4"></div>
                 <div class="col_12 col_md_4"></div>
