--- a/index.html
+++ b/index.html
@@ -123,7 +123,18 @@
                     </p>
                 </div>
                 <div class="col_12 col_lg_6">
-                    <img src="./asset/img/planning2.png" alt="">
+                    <div class="container_whait">
+                        <img src="./asset/img/planning2.png" alt="">
+                        <h2>App Development</h2>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum corrupti eaque vitae
+                            possimus. Aliquam a exercitationem odio alias delectus voluptas esse, debitis aperiam nisi
+                            hic error mollitia minus eveniet nemo.
+                        </p>
+                        <div class="disc">
+                            <i class="fa-solid fa-arrow-down"></i>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
