--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <main>
         <div class="intro">
             <div class="row d_flex">
-                <div class="col_12 col_md_8 col_lg_8">
+                <div class="col_12 col_md_8 col_lg_8 d_flex">
                     <div class="container d_flex">
                         <div class="text_intro">
                             <h2 class="t_center">Get a demo application</h2>
@@ -135,7 +135,7 @@
         <!-- /.intro -->
         <div class="planning">
             <div class="row d_flex">
-                <div class="col_12 col_lg_6">
+                <div class="col_12 col_lg_4">
                     <div class="container d_flex">
                         <img src="./asset/img/planning1.png" alt="">
                         <h2>Strategic Planning</h2>
@@ -144,7 +144,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col_12 col_lg_6">
+                <div class="col_12 col_lg_4">
                     <div class="container_whait">
                         <img src="./asset/img/planning2.png" alt="">
                         <h2 class="t_center">App Development</h2>
@@ -217,7 +217,7 @@
                 <div class="col_12">
                     <h2 class="t_center">Benefits of working with us</h2>
                 </div>
-                <div class="col_6">
+                <div class="col_12 col_md_6 col_lg_4">
                     <div class="container_whait">
                         <h3>01</h3>
                         <h4>Hight Quality</h4>
@@ -228,7 +228,7 @@
                         <button>more</button>
                     </div>
                 </div>
-                <div class="col_6">
+                <div class="col_12 col_md_6 col_lg_4">
                     <div class="container_whait">
                         <h3>01</h3>
                         <h4>Hight Quality</h4>
@@ -239,7 +239,7 @@
                         <button>more</button>
                     </div>
                 </div>
-                <div class="col_6">
+                <div class="col_12 col_md_6 col_lg_4">
                     <div class="container_whait">
                         <h3>01</h3>
                         <h4>Hight Quality</h4>
@@ -250,7 +250,7 @@
                         <button>more</button>
                     </div>
                 </div>
-                <div class="col_6">
+                <div class="col_12 col_md_6 col_lg_4">
                     <div class="container_whait">
                         <h3>01</h3>
                         <h4>Hight Quality</h4>
@@ -261,7 +261,7 @@
                         <button>more</button>
                     </div>
                 </div>
-                <div class="col_6">
+                <div class="col_12 col_md_6 col_lg_4">
                     <div class="container_whait">
                         <h3>01</h3>
                         <h4>Hight Quality</h4>
@@ -272,7 +272,7 @@
                         <button>more</button>
                     </div>
                 </div>
-                <div class="col_6">
+                <div class="col_12 col_md_6 col_lg_4">
                     <div class="container_whait">
                         <h3>01</h3>
                         <h4>Hight Quality</h4>
