add element in to about

--- a/index.html
+++ b/index.html
@@ -288,8 +288,22 @@
         <!-- /.benefits -->
         <div class="about">
             <div class="row d_flex">
-                <div class="col_12 col_md_6"></div>
-                <div class="col_12 col_md_6"></div>
+                <div class="col_12 col_md_6">
+                    <h2>About us</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                         Impedit excepturi quam accusantium atque dolorum 
+                         similique quaerat repudiandae, sed distinctio consectetur
+                          eaque consequuntur ratione fuga cupiditate non totam 
+                          adipisci, hic harum.
+                    </p>
+                </div>
+                <div class="col_12 col_md_6">
+                    <div class="img">
+                        <img src="./asset/img/about.jpg" alt="about">
+                    </div>
+                    <h3>I help companies tincidunt tortor aliquam nulla facilis cras fermentum odio</h3>
+                    <button>Find me on linkedin</button>
+                </div>
             </div>
         </div>
         <!-- /.about -->
