fix element position into about

--- a/index.html
+++ b/index.html
@@ -288,21 +288,34 @@
         <!-- /.benefits -->
         <div class="about">
             <div class="row d_flex">
-                <div class="col_12 col_md_6">
-                    <h2>About us</h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                         Impedit excepturi quam accusantium atque dolorum 
-                         similique quaerat repudiandae, sed distinctio consectetur
-                          eaque consequuntur ratione fuga cupiditate non totam 
-                          adipisci, hic harum.
-                    </p>
-                </div>
-                <div class="col_12 col_md_6">
-                    <div class="img">
-                        <img src="./asset/img/about.jpg" alt="about">
+                <div class="col_12 col_md_6 col_lg_6">
+                    <div class="container">
+                        <h2>About us</h2>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                             Impedit excepturi quam accusantium atque dolorum 
+                             similique quaerat repudiandae, sed distinctio consectetur
+                              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae quia harum mollitia neque eligendi, fugit perspiciatis ratione itaque debitis facilis omnis quidem voluptatem adipisci natus voluptas maxime veritatis repellat nobis?
+                             eaque consequuntur ratione fuga cupiditate non totam 
+                              adipisci, hic harum.
+                        </p>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                            Impedit excepturi quam accusantium atque dolorum 
+                            similique quaerat repudiandae, sed distinctio consectetur
+                             eaque consequuntur ratione fuga cupiditate non totam 
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla eligendi excepturi cupiditate ab. In explicabo similique officiis sit! Accusantium neque id rerum consequuntur corporis unde officia pariatur repellat quod numquam.
+                             adipisci, hic harum.
+                       </p>
                     </div>
-                    <h3>I help companies tincidunt tortor aliquam nulla facilis cras fermentum odio</h3>
-                    <button>Find me on linkedin</button>
+                </div>
+                <div class="col_12 col_md_6 col_lg_6">
+                    <div class="container_id">
+                        <div class="img d_flex">
+                            <img src="./asset/img/about.jpg" alt="about">
+                        </div>
+                        <h3>I help companies tincidunt tortor aliquam nulla facilis cras fermentum odio</h3>
+                        <button>Find me on linkedin</button>
+
+                    </div>
                 </div>
             </div>
         </div>
