fix position elementd get und add element footer

--- a/index.html
+++ b/index.html
@@ -322,12 +322,30 @@
         <!-- /.about -->
         <div class="get">
             <div class="row">
-                <div class="col_12"></div>
+                <div class="col_12">
+                    <div class="container t_center">
+                        <h4>GET START</h4>
+                        <h3>Simple, Transparent Pricing</h3>
+                        <h2>It's Free!</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur 
+                            adipisicing elit. Iste eius voluptatum 
+                            qui! Ut itaque minima quod nihil ad 
+                            beatae laborum! Non, aliquid! Dolorem 
+                            optio, velit sed vel officia itaque in!
+                        </p>
+                        <button>Get Started</button>
+                        <p>Copyright 2021 Boolean - Classe 91 - <a href="">Privacy policy</a></p>
+                    </div>
+                </div>
             </div>
         </div>
         <!-- /.get -->
     </main>
     <footer>
+        <div class="container">
+            <p></p>
+            <p></p>
+        </div>
 
     </footer>
 </body>
