fix paddig get und position footer

--- a/index.html
+++ b/index.html
@@ -341,10 +341,13 @@
         </div>
         <!-- /.get -->
     </main>
-    <footer>
+    <footer class="d_flex">
         <div class="container">
-            <p></p>
-            <p></p>
+            <p>Lorem ipsum dolor sit amet consectetur 
+                adipisicing elit. Expedita natus, dolore
+                 impedit rem explicabo sit.
+            </p>
+            <p><a href="">Lorem ipsum</a>dolor sitblabla palelelelel <a href="">Boolean carees</a></p>
         </div>
 
     </footer>
