--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body class="">
-    <header>
+    <header class="d_flex">
         <nav class="d_flex">
             <div class="logo">
                 <img src="./asset/img/logo.png" alt="Logo">
