use class ponerem

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <main>
         <div class="intro">
             <div class="row d_flex">
-                <div class="col_12 col_md_8 col_lg_8 d_flex">
+                <div class="col_12 col_md_8 col_lg_8 d_flex ponerem">
                     <div class="container d_flex">
                         <div class="text_intro">
                             <h2 class="t_center">Get a demo application</h2>
@@ -171,7 +171,7 @@
                         consectetur animi et, tempora molestiae?</p>
                 </div>
                 <div class="col_12">
-                    <div class="container_violet d_flex">
+                    <div class="container_violet d_flex ponerem">
                         <div class="img">
                             <img src="./asset/img/testimonial1.jpg" alt="">
                         </div>
@@ -184,7 +184,7 @@
                     </div>
                 </div>
                 <div class="col_12">
-                    <div class="container_violet d_flex">
+                    <div class="container_violet d_flex ponerem">
                         <div class="img">
                             <img src="./asset/img/testimonial2.jpg" alt="">
                         </div>
@@ -214,11 +214,11 @@
         <!-- /.partners -->
         <div class="benefits">
             <div class="row d_flex">
-                <div class="col_12">
+                <div class="col_12 ponerem">
                     <h2 class="t_center">Benefits of working with us</h2>
                 </div>
-                <div class="col_12 col_md_6 col_lg_4">
-                    <div class="container_whait">
+                <div class="col_12 col_md_6 col_lg_4 ponerem">
+                    <div class="container_whait ponerem">
                         <h3>01</h3>
                         <h4>Hight Quality</h4>
                         <p>
@@ -228,8 +228,8 @@
                         <button>more</button>
                     </div>
                 </div>
-                <div class="col_12 col_md_6 col_lg_4">
-                    <div class="container_whait">
+                <div class="col_12 col_md_6 col_lg_4 ponerem">
+                    <div class="container_whait ponerem">
                         <h3>01</h3>
                         <h4>Hight Quality</h4>
                         <p>
@@ -239,8 +239,8 @@
                         <button>more</button>
                     </div>
                 </div>
-                <div class="col_12 col_md_6 col_lg_4">
-                    <div class="container_whait">
+                <div class="col_12 col_md_6 col_lg_4 ponerem">
+                    <div class="container_whait ponerem">
                         <h3>01</h3>
                         <h4>Hight Quality</h4>
                         <p>
@@ -250,8 +250,8 @@
                         <button>more</button>
                     </div>
                 </div>
-                <div class="col_12 col_md_6 col_lg_4">
-                    <div class="container_whait">
+                <div class="col_12 col_md_6 col_lg_4 ponerem">
+                    <div class="container_whait ponerem">
                         <h3>01</h3>
                         <h4>Hight Quality</h4>
                         <p>
@@ -261,8 +261,8 @@
                         <button>more</button>
                     </div>
                 </div>
-                <div class="col_12 col_md_6 col_lg_4">
-                    <div class="container_whait">
+                <div class="col_12 col_md_6 col_lg_4 ponerem">
+                    <div class="container_whait ponerem">
                         <h3>01</h3>
                         <h4>Hight Quality</h4>
                         <p>
@@ -272,8 +272,8 @@
                         <button>more</button>
                     </div>
                 </div>
-                <div class="col_12 col_md_6 col_lg_4">
-                    <div class="container_whait">
+                <div class="col_12 col_md_6 col_lg_4 ponerem">
+                    <div class="container_whait ponerem">
                         <h3>01</h3>
                         <h4>Hight Quality</h4>
                         <p>
@@ -288,7 +288,7 @@
         <!-- /.benefits -->
         <div class="about">
             <div class="row d_flex">
-                <div class="col_12 col_md_6 col_lg_6">
+                <div class="col_12 col_md_6 col_lg_6 ">
                     <div class="container">
                         <h2>About us</h2>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
